--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preload" href="fonts/rouble.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" href="./img/main-logo/mobile-logo.png">
 </head>
 <body>
   <div class="wrapper">
