--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
           <p>
             Мы стремимся к постоянному развитию и повышению уровня качества продукции, производимой внутри компании. Использование инновационных технологий помогает экономить деньги и время наших клиентов.
           </p>
-          <button class="about-company__button" type="button">подробнее</button>
+          <!--
+            Кнопка с классом about-company__button для ридера не нужна, весь текстовый контент для ридера доступен сразу
+           -->
+          <button class="about-company__button" type="button" aria-hidden="true">подробнее</button>
         </div>
       </section>
 
@@ -246,8 +249,8 @@
              -->
           <section class="main-footer__container main-footer__section main-footer__site-sections">
             <!-- Текстовое описание для элемента с классом main-footer__accordion-toggler не нужно, эта кнопка только для визуального эффекта -->
-            <button class="main-footer__accordion-toggler" type="button">
-              <span class="visually-hidden">Только визуальная кнопка</span>
+            <button class="main-footer__accordion-toggler" type="button" aria-hidden="true">
+              <span class="visually-hidden" aria-hidden="true">Только визуальная кнопка</span>
             </button>
             <h2 class="main-footer__section-header main-footer__section-header--open">Разделы сайта</h2>
             <div class="main-footer__site-sections-parts main-footer__accordion ">
@@ -268,8 +271,8 @@
 
           <section class="main-footer__container main-footer__section main-footer__our-office">
             <!-- Текстовое описание для элемента с классом main-footer__accordion-toggler не нужно, эта кнопка только для визуального эффекта -->
-            <button class="main-footer__accordion-toggler" type="button">
-              <span class="visually-hidden">Только визуальная кнопка</span>
+            <button class="main-footer__accordion-toggler" type="button" aria-hidden="true">
+              <span class="visually-hidden" aria-hidden="true">Только визуальная кнопка</span>
             </button>
             <h2 class="main-footer__section-header main-footer__section-header--open">Наш офис</h2>
             <div class="main-footer__site-sections-part main-footer__accordion ">
