--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
       <section class="about-company">
         <div class="about-company__grid container">
-          <div class="about-company__year">2022</div>
+          <div class="about-company__year" aria-hidden="true">2022</div>
           <h2 class="about-company__header">О компании</h2>
           <p>
             Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997
