--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
              -->
           <section class="main-footer__container main-footer__section main-footer__site-sections">
             <button class="main-footer__accordion-toggler" type="button">
-              <span class="visually-hidden">Только визуальная кнопка</span>
+              <span class="visually-hidden">Раскрыть список ссылок о компании</span>
             </button>
             <h2 class="main-footer__section-header main-footer__section-header--open">Разделы сайта</h2>
             <div class="main-footer__site-sections-parts main-footer__accordion ">
@@ -268,7 +268,7 @@
 
           <section class="main-footer__container main-footer__section main-footer__our-office">
             <button class="main-footer__accordion-toggler" type="button">
-              <span class="visually-hidden">Только визуальная кнопка</span>
+              <span class="visually-hidden">Раскрыть список ссылок с контактами и адресом</span>
             </button>
             <h2 class="main-footer__section-header main-footer__section-header--open">Наш офис</h2>
             <div class="main-footer__site-sections-part main-footer__accordion ">
