--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       </div>
     </header>
 
-    <main>
-      <div class="main-screen">
+    <main class="main">
+      <div class="main__screen main-screen">
         <div class="main-screen__grid container">
           <p>печатные платы</p>
           <h1>производство и&nbsp;монтаж, поставка комплектующих, блоков и&nbsp;модулей</h1>
@@ -75,8 +75,8 @@
               </svg>
               <span class="advantages__title">Оперативные сроки</span>
               <p class="advantages__description">
-                Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять
-                заказы плат и комплектующих в самые короткие сроки
+                Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить
+                и&nbsp;доставлять заказы плат и&nbsp;комплектующих в&nbsp;самые короткие сроки
                 <br><br>
               </p>
             </li>
@@ -87,7 +87,7 @@
               <span class="advantages__title">Крупные поставщики</span>
               <p class="advantages__description">
                 Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
-                Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.
+                Сотрудничество с&nbsp;такими компаниями обеспечивает хорошее качество нашей продукции.
               </p>
             </li>
             <li class="advantages__item">
@@ -96,7 +96,7 @@
               </svg>
               <span class="advantages__title">Полная конфиденциальность</span>
               <p class="advantages__description advantages__description--designers-artistic-view">
-                По желанию клиента мы обеспечиваем полную конфиденциальность.
+                По&nbsp;желанию клиента мы&nbsp;обеспечиваем полную конфиденциальность.<br />
               </p>
             </li>
             <li class="advantages__item">
@@ -106,7 +106,7 @@
               <span class="advantages__title advantages__title--designers-artistic-view">Персонализация стоимости</span>
               <p class="advantages__description advantages__description--designers-artistic-view">
                 Мы&nbsp;подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту&nbsp;цену,
-                которая Вас устраивает.
+                которая Вас устраивает.<br />
               </p>
             </li>
           </ul>
@@ -118,19 +118,20 @@
           <div class="about-company__year" aria-hidden="true">2022</div>
           <h2 class="about-company__header">О компании</h2>
           <p>
-            Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997
-            года. Выполняем срочные заказы и пилотные образцы до 10 дней.
+            Мы&nbsp;поставляем электронные комплектующие, производим печатные платы и&nbsp;предоставляем мировые
+            технологии с&nbsp;1997&nbsp;года. Выполняем срочные заказы и&nbsp;пилотные образцы до&nbsp;10&nbsp;дней.
           </p>
           <p>
-            Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND.
+            Наши поставщики&nbsp;&mdash; мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
+            REFOND.
             <!--
               Класс для скрытия части текста на мобилке
               about-company__mobile-hidden
              -->
             <span class="about-company__mobile-description">
-              Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД),
-              РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители
-              светотехники России.
+              Печатные платы и&nbsp;комплектующие Service Devices применяются на&nbsp;предприятиях Российских Железных
+              Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие
+              Производители светотехники России.
             </span>
           </p>
           <!--
@@ -138,10 +139,15 @@
             about-company__description-hidden
            -->
           <p>
-            Smart Device - это команда профессионалов. Через нас прошло более 1 000 000 клиентов, 70% из которых продолжают сотрудничество по сей день. На данный момент насчитывается более 14 офисов по всей стране и 20 городов присутствия.
+            Smart Device&nbsp;&mdash; это команда профессионалов. Через нас прошло более
+            1&nbsp;000&nbsp;000&nbsp;клиентов, 70% из&nbsp;которых продолжают сотрудничество по&nbsp;сей день.
+            На&nbsp;данный момент насчитывается более 14&nbsp;офисов по&nbsp;всей стране и&nbsp;20&nbsp;городов
+            присутствия.
           </p>
           <p>
-            Мы стремимся к постоянному развитию и повышению уровня качества продукции, производимой внутри компании. Использование инновационных технологий помогает экономить деньги и время наших клиентов.
+            Мы&nbsp;стремимся к&nbsp;постоянному развитию и&nbsp;повышению уровня качества продукции, производимой
+            внутри компании. Использование инновационных технологий помогает экономить деньги и&nbsp;время наших
+            клиентов.
           </p>
 
           <button class="about-company__button" type="button">подробнее</button>
@@ -150,7 +156,8 @@
 
       <section class="products-and-services">
         <div class="container">
-          <h2 class="products-and-services__header"><span>Smart Device предлагает следующие товары и услуги</span></h2>
+          <h2 class="products-and-services__header"><span>Smart Device предлагает следующие товары и&nbsp;услуги</span>
+          </h2>
           <ul class="products-and-services__list">
             <li class="products-and-services__item">
               <a class="products-and-services__link" href="#">Производство печатных&nbsp;плат</a>
@@ -167,27 +174,33 @@
 
 
       <div class="form" id="free-consultation">
-        <div class="container">
+        <div class="container" data-form-validate data-callback="callback">
           <form action="https://echo.htmlacademy.ru/" method="post">
-            <fieldset>
+            <fieldset >
               <legend>Остались&nbsp;вопросы? Задайте&nbsp;их&nbsp;нам!</legend>
               <p>Мы проконсультируем Вас бесплатно</p>
               <div class="form__inputs-grid">
-                <label class="visually-hidden" for="name-from-form">Поле для ввода имени.</label>
-                <input id="name-from-form" name="name" type="text" placeholder="Имя" required>
-                <label class="visually-hidden" for="phone-from-form">Поле для ввода своего мобильного телефона.</label>
-                <input id="phone-from-form" name="phone" type="tel" placeholder="Телефон" required>
+                <label data-validate-type="text" data-required data-message-base="Обязательное поле">
+                  <span class="visually-hidden">Поле для ввода имени.</span>
+                  <input id="name-from-form" name="name" type="text" placeholder="Имя" required>
+                </label>
+
+                <label data-validate-type="phone" data-message-extra="Поле заполнено не верно" data-on-input-validate data-required data-message-base="Обязательное поле">
+                  <span class="visually-hidden">Поле для ввода своего мобильного телефона.</span>
+                  <input id="phone-from-form" name="phone" type="tel" placeholder="Телефон" required>
+                </label>
+
                 <label class="visually-hidden" for="question-from-form">Опишите свой вопрос здесь.</label>
-                <textarea id="question-from-form" name="question" cols="30" rows="4" placeholder="Ваш вопрос"></textarea>
+                <textarea id="question-from-form" name="question" cols="30" rows="4"
+                  placeholder="Ваш вопрос"></textarea>
               </div>
               <div class="form__buttons-wrap">
-                <button type="submit">задать вопрос</button>
-                <label class="form__agree-label">
-                  <input class="form__default-checkbox" type="checkbox" name="agreement"
-                  value="agree" required>
+                <label class="form__agree-label" data-on-input-validate data-validate-type="checkbox" data-message-base="Чтобы задать вопрос, нужно согласиться на обработку данных">
+                  <input class="form__default-checkbox" type="checkbox" name="agreement" value="agree" required>
                   <span class="form__custom-checkbox"></span>
-                  <span>Я согласен на обработку  персональных данных</span>
+                  <span>Я согласен на обработку персональных данных</span>
                 </label>
+                <button type="submit" >задать вопрос</button>
               </div>
             </fieldset>
           </form>
@@ -294,27 +307,36 @@
       <div class="modal__overlay" data-close-modal></div>
       <div class="modal__content">
 
-        <div class="modal-form">
+        <div class="modal-form" data-form-validate data-callback="callback">
           <form action="https://echo.htmlacademy.ru/" method="post">
             <fieldset>
               <legend>Закажите звонок</legend>
               <p>Оставьте контакты, мы&nbsp;проконсультируем вас&nbsp;бесплатно в&nbsp;удобное время</p>
               <div class="modal-form__inputs-grid">
-                <label class="visually-hidden" for="name-from-modal">Поле для ввода имени.</label>
-                <input id="name-from-modal" name="name-from-modal" type="text" placeholder="Имя" required data-focus autofocus>
-                <label class="visually-hidden" for="phone-from-modal">Поле для ввода своего мобильного телефона.</label>
-                <input id="phone-from-modal" name="phone-from-modal" type="tel" placeholder="Телефон" required>
+
+                <label data-validate-type="text" data-required data-message-base="Обязательное поле">
+                  <span class="visually-hidden">Поле для ввода имени.</span>
+                  <input id="name-from-modal" name="name-from-modal" type="text" placeholder="Имя" required data-focus
+                    autofocus>
+                </label>
+
+                <label data-validate-type="phone" data-message-extra="Поле заполнено не верно" data-on-input-validate data-required data-message-base="Обязательное поле">
+                  <span class="visually-hidden">Поле для ввода своего мобильного телефона.</span>
+                  <input id="phone-from-modal" name="phone-from-modal" type="tel" placeholder="Телефон" required>
+                </label>
+
                 <label class="visually-hidden" for="question-from-modal">Опишите свой вопрос здесь.</label>
-                <textarea id="question-from-modal" name="question-from-modal" cols="30" rows="4" placeholder="Ваш вопрос"></textarea>
+                <textarea id="question-from-modal" name="question-from-modal" cols="30" rows="4"
+                  placeholder="Ваш вопрос"></textarea>
               </div>
               <div class="modal-form__buttons-wrap">
-                <button type="submit">отправить</button>
-                <label>
-                  <input class="modal-form__default-checkbox" type="checkbox" name="agreement-from-modal"
-                  value="agree" required>
+                <label class="modal-form__agree-label" data-on-input-validate data-validate-type="checkbox" data-message-base="Чтобы задать вопрос, нужно согласиться на обработку данных">
+                  <input class="modal-form__default-checkbox" type="checkbox" name="agreement-from-modal" value="agree"
+                    required>
                   <span class="modal-form__custom-checkbox"></span>
-                  <span>Я согласен на обработку  персональных данных</span>
+                  <span>Я согласен на обработку персональных данных</span>
                 </label>
+                <button type="submit">отправить</button>
               </div>
             </fieldset>
           </form>
